Resolved cross browser compatibility issues for Chrome and Firefox

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         	<div class="feature__cards">
 
             		<article class="feature__card">
-						<img class="feature__img" src="/assets/feature1-icon.svg">
+						<img class="feature__img" src="/assets/feature1-icon.svg" alt="icon">
 						<div class="feature__details">
 							<h3 class="feature__name">First click tests</h3>
 							<p class="feature__description">While most people enjoy casino gambling,</p>
@@ -80,7 +80,7 @@
 					</article>
 
 					<article class="feature__card">
-						<img class="feature__img" src="/assets/feature2-icon.svg">
+						<img class="feature__img" src="/assets/feature2-icon.svg" alt="icon">
 						<div class="feature__details">
 							<h3 class="feature__name">Design surveys</h3>
 							<p class="feature__description">Sports betting, lottery and bingo playing for the fun</p>
@@ -88,7 +88,7 @@
 						</article>
 
             		<article class="feature__card">
-						<img class="feature__img" src="/assets/feature3-icon.svg">
+						<img class="feature__img" src="/assets/feature3-icon.svg" alt="icon">
 						<div class="feature__details">
 							<h3 class="feature__name">Preference tests</h3>
 							<p class="feature__description">The Myspace page defines the individual.</p>
@@ -96,7 +96,7 @@
 					</article>
 
 					<article class="feature__card">
-						<img class="feature__img" src="/assets/feature4-icon.svg">
+						<img class="feature__img" src="/assets/feature4-icon.svg" alt="icon">
 						<div class="feature__details">
 							<h3 class="feature__name">Five second tests</h3>
 							<p class="feature__description">Personal choices and the overall personality of the person. </p>
@@ -159,21 +159,21 @@
 				</p>
 
 				<article class="content__description-bullet">
-					<img class="content__description-bullet-img" src="/assets/content-bullet.svg">	
+					<img class="content__description-bullet-img" src="/assets/content-bullet.svg" alt="icon">	
 					<p class="content__description-bullet-text">
 						Never worry about overpaying for your energy again.
 					</p>
 				</article>
 
 				<article class="content__description-bullet">	
-					<img class="content__description-bullet-img" src="/assets/content-bullet.svg">	
+					<img class="content__description-bullet-img" src="/assets/content-bullet.svg" alt="icon">	
 					<p class="content__description-bullet-text">
 						We will only switch you to energy companies that we trust and will treat you right				
 					</p>
 				</article>
 
 				<article class="content__description-bullet">	
-					<img class="content__description-bullet-img" src="/assets/content-bullet.svg">	
+					<img class="content__description-bullet-img" src="/assets/content-bullet.svg" alt="icon">	
 					<p class="content__description-bullet-text">
 						We track the markets daily and know where the savings are.				
 					</p>
